# ign-gazebo

./: CMakeLists.txt  Changelog.md  bitbucket-pipelines.yml
doc/: architecture_design.md  frame_design.md
docker/: Dockerfile  Dockerfile.base  Dockerfile.ignition  build.sh  ign-gazebo_entrypoint.sh  run.bash
examples/plugin/rendering_plugin/: CMakeLists.txt  README.md  RenderingPlugin.cc  RenderingPlugin.hh  rendering_plugin.sdf
examples/plugin/system_plugin/: CMakeLists.txt
examples/scripts/distributed/: primary.sdf  primary.sh  secondary.sdf  standalone.sdf
examples/scripts/distributed_demo/: distributed_demo.sdf.erb  primary.sdf  secondary.sdf  standalone.sdf  standalone.sh
examples/scripts/distributed_levels/: distributed_levels.sdf.erb  generate.sh  primary.sdf  primary.sh  primary_vis.sdf  primary_vis.sh  secondary.sdf  secondary.sh  secondary_vis.sdf  secondary_vis.sh  standalone.sdf  standalone_vis.sdf  standalone_vis.sh
examples/scripts/distributed_rolling/: README.md  distributed_rolling.sdf.erb  primary.sdf  secondary.sdf  standalone.sdf  standalone.sh
examples/standalone/joy_to_twist/: joy_to_twist.sdf
examples/standalone/joystick/: CMakeLists.txt
examples/worlds/: altimeter_sensor.sdf  edgar_mine.sdf  edgar_mine_models.dot  edgar_mine_models.sdf.erb  empty.sdf  log_playback.sdf  log_record_keyboard.sdf  log_record_shapes.sdf  move3d.sdf  move_entity.sdf  shapes.sdf
include/ignition/gazebo/: Conversions.hh  EntityComponentManager.hh  EventManager.hh  Model.hh  Server.hh  System.hh  SystemManager.hh  SystemPluginPtr.hh
src/: CMakeLists.txt  ComponentFactory_TEST.cc  Component_TEST.cc  Conversions.cc  EntityComponentManager.cc  EntityComponentManager_TEST.cc  EventManager.cc  Factory.cc  LevelManager.cc  LevelManager.hh  Model.cc  RegisterComponents.cc  SdfEntityCreator.cc  Server.cc  ServerPrivate.cc  Server_TEST.cc  SimulationRunner.cc  SimulationRunner.hh  SimulationRunner_TEST.cc  SyncManager.cc  SyncManager.hh  SyncManagerPrimary.cc  SyncManagerPrimary.hh  SyncManagerSecondary.cc  SyncManagerSecondary.hh  System.cc  SystemLoader_TEST.cc  SystemManager.cc  gui_main.cc  ign_TEST.cc  main.cc
src/cmd/: CMakeLists.txt  cmdgazebo.rb.in
src/msgs/: CMakeLists.txt  performer_affinity.proto  simulation_step.proto
src/network/: NetworkManager.cc  NetworkManager.hh  NetworkManagerPrimary.cc  NetworkManagerPrimary.hh  NetworkManagerPrivate.hh  NetworkManagerSecondary.cc  NetworkManagerSecondary.hh  NetworkManager_TEST.cc  PeerInfo.cc  PeerInfo.hh  PeerTracker.cc  SyncManager.cc  SyncManager.hh  SyncManagerPrimary.cc  SyncManagerPrimary.hh  SyncManagerSecondary.cc  SyncManagerSecondary.hh
src/rendering/: RenderUtil.cc
src/systems/: CMakeLists.txt  DiffDrive.cc  Move3d.cc  Move3d.hh  Null.cc  Null.hh  Physics.cc  Rendering.cc  SceneBroadcaster.cc  SceneBroadcaster_TEST.cc
src/systems/altimeter/: Altimeter.cc  Altimeter.hh
src/systems/battery_plugin/: LinearBatteryPlugin.cc
src/systems/diff_drive/: CMakeLists.txt  DiffDrive.cc
src/systems/imu/: Imu.hh
src/systems/log/: LogPlayback.cc  LogRecord.cc  LogRecord.hh
src/systems/move_entity/: CMakeLists.txt  MoveEntity.cc  MoveEntity.hh
src/systems/networking/: CMakeLists.txt  ClientManager.cc  ClientManager.hh  NetworkPrimary.cc  NetworkPrimary.hh  NetworkSecondary.cc  NetworkSecondary.hh
src/systems/networking/msgs/: CMakeLists.txt  client.proto
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  components.cc  diff_drive_system.cc  diff_drive_system2.cc  each_new_removed.cc  events.cc  log_system.cc  model.cc  move3d_system.cc  networking_handshake.cc  physics_system.cc  scene_broadcaster_system.cc  touch_plugin.cc
test/performance/: sdf_runner.cc
test/plugins/: Move3dSystem.cc
test/sanitizer/thread/: CMakeLists.txt  ecm_race.cc
test/worlds/: blank.sdf  diff_drive.sdf  diff_drive_skid.sdf  move3d.sdf  plane_mesh.sdf  shapes.sdf
tutorials/: distributed_simulation.md
(+74 files in other folders)
