ign_get_sources(thread_san_tests)
if(UNIX)
  # Disable these tests by default because they may be flaky
  option (ENABLE_TSAN "Enable Thread Sanitizer" OFF)
  if (ENABLE_TSAN)
    set(TEST_PREFIX "SANITIZER_THREAD")
    message(STATUS "Configuring Thread Sanitizer tests")
    foreach(test_file ${thread_san_tests})
      string(REGEX REPLACE ".cc" "" test ${TEST_PREFIX}_${test_file})
      add_executable(${test} ${test_file})
      target_link_libraries(${test} ${PROJECT_LIBRARY_TARGET_NAME} -fsanitize=thread)
      target_compile_options(${test} PUBLIC -g -O1 -fsanitize=thread -fno-omit-frame-pointer -fPIC)
      add_test(NAME ${test} COMMAND ${test})
    endforeach()
  endif()
endif()
